# rustic

./: bun.lockb  package.json
src/routes/: +page.server.ts  +page.svelte
src/routes/time/: +server.ts
src/rustscript/: Cargo.toml  README.md  index.ts  package-lock.json  package.json
src/rustscript/src/: lib.rs
